add mais traduções

--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/adjectives/adjectives.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/adjectives/adjectives.page.html
@@ -3,6 +3,8 @@
         <ion-toolbar>
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
+            </ion-buttons>
+            <ion-buttons slot="end">
                 <ion-button (click)="openLanguagePopover($event)">
                     <ion-icon name="more" slot="icon-only">
                     </ion-icon>
