--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/comparatives/comparatives.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/comparatives/comparatives.page.html
@@ -4,6 +4,12 @@
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
             </ion-buttons>
+            <ion-buttons slot="end">
+                <ion-button (click)="openLanguagePopover($event)">
+                    <ion-icon name="more" slot="icon-only">
+                    </ion-icon>
+                </ion-button>
+            </ion-buttons>
         </ion-toolbar>
     </ion-header>
 
@@ -19,9 +25,9 @@
 
                 <br>
                 <br>
-                <ul>
-                    <li>Use comparative adjectives + than to compare two things, people, etc.</li>
-                </ul>
+
+                <ion-text [innerHTML]="'COMPARATIVES.explanations' | translate"></ion-text>
+
 
 
                 <table class="table table-hover">
