--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/frequency/frequency.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/frequency/frequency.page.html
@@ -4,7 +4,12 @@
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
             </ion-buttons>
-            <ion-title>Frequency</ion-title>
+            <ion-buttons slot="end">
+                <ion-button (click)="openLanguagePopover($event)">
+                    <ion-icon name="more" slot="icon-only">
+                    </ion-icon>
+                </ion-button>
+            </ion-buttons>
         </ion-toolbar>
     </ion-header>
 
@@ -34,16 +39,7 @@
                     </tbody>
                 </table>
 
-                <ol>
-                    <li>We use adverbs os frequency to say how often you do something.</li>
-
-                    <ul>
-                        <li>Adverbs of frequency go <u>before</u> all main verbs (except be).</li>
-                        <li>Use a [+] verb with never and hardly ever. He <strong>never smokes. NOT</strong> <s>He doesn't never smoke.</s></li>
-                        <li>In negative sentences the adverb of frequency goes between don't/doesn't and the verb.</li>
-                    </ul>
-                    <li>Expressions of frequency usually go at the end of a sentence or verb phase.</li>
-                </ol>
+                <ion-text [innerHTML]="'FREQUENCY.explanation' | translate"></ion-text>
             </ion-card>
         </div>
     </ion-content>
