--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/object-pronouns/object-pronouns.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/object-pronouns/object-pronouns.page.html
@@ -4,6 +4,12 @@
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
             </ion-buttons>
+            <ion-buttons slot="end">
+                <ion-button (click)="openLanguagePopover($event)">
+                    <ion-icon name="more" slot="icon-only">
+                    </ion-icon>
+                </ion-button>
+            </ion-buttons>
         </ion-toolbar>
     </ion-header>
 
@@ -66,13 +72,8 @@
                     </tbody>
                 </table>
 
-                <ul>
-                    <li>Pronouns take place of nouns.</li>
-                    <li>We use <strong>subject</strong> pronouns when the noun is the subject of a verb (i.e. the person who does the action): <strong>John</strong> is a doctor. <strong>He</strong> lives in London.</li>
-                    <li>We use <strong>object</strong> pronouns when the noun is the object of a verb (i.e. the person who receives the action): Anna meets <strong>John</strong>. She invites <strong>him</strong>to a concert.</li>
-                    <li>Object pronouns go <u>after</u> the verb: <br> I <strong>love you</strong>. <strong>NOT</strong> <s>I you love</s>.</li>
-                    <li>We also use object pronouns after prepositions (with, to, from, etc.): <br> Listen to <strong>me</strong>! I'm in love with <strong>her</strong>. <strong>NOT</strong> <s>I'm in love with she</s></li>
-                </ul>
+                <ion-text [innerHTML]="'PRONOUNS.explanation' | translate"></ion-text>
+
 
             </ion-card>
         </div>
