--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/plural/plural.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/plural/plural.page.html
@@ -4,6 +4,12 @@
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
             </ion-buttons>
+            <ion-buttons slot="end">
+                <ion-button (click)="openLanguagePopover($event)">
+                    <ion-icon name="more" slot="icon-only">
+                    </ion-icon>
+                </ion-button>
+            </ion-buttons>
         </ion-toolbar>
     </ion-header>
 
@@ -47,20 +53,14 @@
                 </table>
 
                 <h6>there is / there are</h6>
-                <ul>
-                    <li>We use there is / there are to say that somebody or something exists. We use there is + a singular noun and there are + plural nouns.</li>
-                    <li>There is is often contracted to There's. There are is not usually contracted.</li>
-                    <li>When we talk about a list of things we use there is if the first word in the list is singular or there are if the first word on the list is plural: <br> In my bedroom <strong>there's a</strong> bed, two chairs, and a desk. <br> In
-                        the living room <strong>there are</strong> two armchairs and a sofa.table-secondary
-                    </li>
-                </ul>
+
+                <ion-text [innerHTML]="'PLURAL.explanation' | translate"></ion-text>
+
 
                 <h6>a / an, some and any</h6>
-                <ul>
-                    <li>We often use there is / there are with a / an, some and any.</li>
-                    <li>Use some and any with plural nouns. <br> Some = not an exact number.</li>
-                    <li>Use some in [+] sentences and any in [-] and [?].</li>
-                </ul>
+
+                <ion-text [innerHTML]="'PLURAL.explanation1' | translate"></ion-text>
+
             </ion-card>
         </div>
 
